--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,11 @@
     </head>
     <body>
         <div id="app">
+            <nav id="navbar">
+                <a class="active" href="/">Home</a>
+                <a href="/teagle-dealer-finder/contact.html">Contact</a>
+            </nav>
+
             <h1>Teagle Dealer Finder Example</h1>
 
             <iframe
@@ -17,6 +22,6 @@
             ></iframe>
         </div>
 
-        <script type="module" src="/src/main.ts"></script>
+        <script type="module" src="/main.ts"></script>
     </body>
 </html>
