--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id="app">
             <nav id="navbar">
-                <a class="active" href="/">Home</a>
+                <a class="active" href="/teagle-dealer-finder/">Home</a>
                 <a href="/teagle-dealer-finder/contact.html">Contact</a>
             </nav>
 
